[metadata]
name = render_pipeline
version = 2.0
author = tobspr
author-email = tobias.springer1@googlemail.com
url = https://github.com/tobspr/RenderPipeline
license = MIT
license_file = LICENSE.txt
keywords = Panda3D OpenGL
description = Deferred Rendering Pipeline with Physically Based Shading for the Panda3D Game Engine
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Natural Language :: English
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Topic :: Games/Entertainment
  Topic :: Multimedia :: Graphics :: 3D Rendering
  Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
setup-requires =
  panda3d>=1.10
install-requires =
  panda3d>=1.10
  colorama
  PyYAML

[options.packages.find]
exclude =
  rpcore.pynative
  rplibs.colorama
  rplibs.progressbar
  rplibs.yaml.yaml_py2
  rplibs.yaml.yaml_py3

[bdist_wheel]
universal = 1
